2006-09-28  Raffaele Sandrini <rasa@gmx.ch>
	* vala/valacodegenerator.vala, vala/valasemanticanalyzer.vala,
	  vala/valamemorymanager.vala: add one dimensional array assignment
	  support
	* tests/test-022.vala: testcase for array creation/assignment
	* tests/Makefile.am: update

2006-09-28  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: add and improve various types

2006-09-28  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: set attributes also for non-readable properties
	* vala/valacodegenerator.vala: support interface signals
	* vala/valainvocationexpression.vala,
	  vala/valaobjectcreationexpression.vala: fix problem when children
	  change while iterating over them

2006-09-27  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala, vala/valainterfacewriter.vala,
	  vala/valamethod.vala: support InstanceByReference attribute
	* vapi/glib-2.0.vala: add Filename struct, fix Process methods
	* vapi/atk.vala, vapi/gdk-2.0.vala, vapi/gtk+-2.0.vala, vapi/pango.vala:
	  fix static methods without parameters, add InstanceByReference
	  attributes

2006-09-27  Jürg Billeter  <j@bitron.ch>

	* vala/valainterface.vala: visit interface signals
	* vala/valainterfacewriter.vala: obey lock keyword
	* vapi/atk.vala, vapi/gtk+-2.0.vala: add interface signals

2006-09-27  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/glib-2.0.vala: add threading and assorted structures
	* vala/valamember.vala: add an additional abstraction for all members
	  of a class
	* vala/valalockstatement.vala, vala/valacodegenerator.vala,
	  vala/scanner.l, vala/valasemanticanalyzer.vala,
	  vala/valalockable.vala, vala/parser.y, vala/valacodevisitor.vala:
	  add lock feature to vala
	* vala/valamethod.vala, vala/valafield.vala, vala/valaconstant.vala,
	  vala/valasignal.vala, vala/valaproperty.vala: make those members
	  lockable
	* vala/valacodegenerator.vala: use member abstraction to simlify field
	  initialisation and destruction